Integration with DB in reactive mode